[gd_scene load_steps=10 format=3 uid="uid://dawuyxa6pm2wi"]

[ext_resource type="Script" path="res://mainGame.gd" id="1_sg2vb"]
[ext_resource type="Texture2D" uid="uid://cbwgx8m8hv8kk" path="res://playerBase.png" id="3_gd677"]
[ext_resource type="Texture2D" uid="uid://bywyeswjp66l0" path="res://ground.png" id="3_mpic1"]
[ext_resource type="Script" path="res://playerBase.gd" id="3_rs42k"]
[ext_resource type="Texture2D" uid="uid://cohj6yg7p3vly" path="res://enemyBase.png" id="5_5aydn"]
[ext_resource type="Script" path="res://enemyBase.gd" id="5_6tvdo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hy75g"]
size = Vector2(2044, 348.722)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rw5e6"]
size = Vector2(509, 518)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bq6ca"]
size = Vector2(629.825, 596.491)

[node name="Game" type="Node2D"]
position = Vector2(-4, -2)
script = ExtResource("1_sg2vb")

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2(0, 512)

[node name="Sprite2D" type="Sprite2D" parent="ground"]
position = Vector2(0, -338)
scale = Vector2(1, 0.339844)
texture = ExtResource("3_mpic1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground"]
position = Vector2(0, -336.361)
shape = SubResource("RectangleShape2D_hy75g")

[node name="playerBase" type="StaticBody2D" parent="."]
position = Vector2(-883, -147)
scale = Vector2(0.57, 0.57)
collision_layer = 2
collision_mask = 0
script = ExtResource("3_rs42k")

[node name="Sprite2D" type="Sprite2D" parent="playerBase"]
texture = ExtResource("3_gd677")

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerBase"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_rw5e6")

[node name="ProgressBar" type="ProgressBar" parent="playerBase"]
offset_left = -121.053
offset_top = -405.263
offset_right = 128.947
offset_bottom = -355.263
max_value = 1000.0
step = 1.0
value = 1000.0
show_percentage = false

[node name="Area2D" type="Area2D" parent="playerBase"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerBase/Area2D"]
position = Vector2(-13.1577, -43.8597)
shape = SubResource("RectangleShape2D_bq6ca")

[node name="enemyBase" type="StaticBody2D" parent="."]
position = Vector2(880, -146)
scale = Vector2(0.57, 0.57)
collision_layer = 2
collision_mask = 0
script = ExtResource("5_6tvdo")

[node name="Sprite2D" type="Sprite2D" parent="enemyBase"]
texture = ExtResource("5_5aydn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyBase"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_rw5e6")

[node name="Area2D" type="Area2D" parent="enemyBase"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyBase/Area2D"]
position = Vector2(-13.1577, -43.8597)
shape = SubResource("RectangleShape2D_bq6ca")

[node name="ProgressBar" type="ProgressBar" parent="enemyBase"]
offset_left = -121.053
offset_top = -405.263
offset_right = 128.947
offset_bottom = -355.263
max_value = 1000.0
step = 1.0
value = 1000.0
show_percentage = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -177)
offset = Vector2(0, -7.8)
zoom = Vector2(0.56, 0.56)

[node name="Button" type="Button" parent="."]
offset_left = 498.0
offset_top = -626.0
offset_right = 541.0
offset_bottom = -595.0
focus_mode = 0
text = "man"

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
